[project]
name = "integrations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "anishagrawal" }
]
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.3.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.7.0",
]

[project.optional-dependencies]
agents = [
    "openai-agents>=0.2.5",
    "python-dotenv>=1.0.1",
]
ui = [
    "fastapi>=0.116.1",
    "sqlmodel>=0.0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs-terminal~=4.0",
    "mkdocs>=1.6.1",
    "pytest-asyncio>=1.2.0",
    "pytest>=8.4.1",
    "rust-just>=1.42.3",
]
